external-crates/move/crates/move-compiler/tests/move_check/verification/cross_module_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/verification/cross_module_invalid.move:10:7
   │
10 │     #[verify_only]
   │       ^^^^^^^^^^^ The 'verify_only' attribute has been deprecated along with specification blocks

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/verification/cross_module_invalid.move:13:7
   │
13 │     #[verify_only]
   │       ^^^^^^^^^^^ The 'verify_only' attribute has been deprecated along with specification blocks

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/verification/cross_module_invalid.move:16:7
   │
16 │     #[verify_only]
   │       ^^^^^^^^^^^ The 'verify_only' attribute has been deprecated along with specification blocks

error[E03004]: unbound type
   ┌─ tests/move_check/verification/cross_module_invalid.move:22:23
   │
22 │     public fun bad(): Foo {
   │                       ^^^ Unbound type 'Foo' in current scope

error[E03002]: unbound module
   ┌─ tests/move_check/verification/cross_module_invalid.move:23:9
   │
23 │         A::build_foo()
   │         ^ Unbound module alias 'A'
